@@ -34,6 +34,9 @@ The `ConsumerEndpointFactoryBean` now accept a `reactiveCustomizer` `Function` t
 This is covered as a `ConsumerEndpointSpec.reactive()` option in Java DSL and as a `@Reactive` nested annotation for the messaging annotations.
 See <<./reactive-streams.adoc#reactive-streams,Reactive Streams Support>> for more information.
 
+The `groupTimeoutExpression` for a correlation message handler (an `Aggregator` and `Resequencer`) can now be evaluated to `java.util.Date` for some fine-grained scheduling use-cases.
+See <<./aggregator.adoc#aggregator,Aggregator>> for more information.
+
 [[x5.5-amqp]]
 ==== AMQP Changes
 
